<package>

    <name>syrena_gazebo_ar_track</name>
    <version>0.0.0</version>
    <description>This package use on Project ar track of inter year 2019</description>
    <maintainer email="supasan.k@ku.th">K.Supasan</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>

    <run_depend>roscpp</run_depend>

</package>
